Added new flow to profile using API and shutdownhook()